2005-04-06  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/menu-tree.c:
	(menu_tree_header_new),
	(menu_tree_alias_new): unset the parent on aliased
	items.

2005-04-05  Mark McLoughlin  <mark@skynet.ie>

	Fix memory leaks on reload - bug #172472. Basically,
	because of a cyclic reference we were leaking the entire
	tree every time we reloaded.

	* libmenu/menu-tree.c:
	(menu_tree_item_set_parent): add.
	(menu_tree_directory_finalize): unset the parent reference
	on all items before unreffing them.
	(menu_tree_directory_new), (menu_tree_separator_new),
	(menu_tree_header_new),	(menu_tree_alias_new),
	(menu_tree_entry_new): don't take a ref on the parent.
	(menu_tree_item_unref_and_unset_parent): helper function.
	(process_layout), (process_only_unallocated),
	(merge_subdir), (process_layout_info):
	update the parent reference on items when deleting them
	or moving them between directories.
	
	* libmenu/desktop-entries.c: (desktop_entry_reload): add debug.
	
	* libmenu/entry-directories.c: (cached_dir_update_entry): don't
	unref the entry if reloading fails - desktop_entry_reload ()
	does that.
	
2005-04-05  Mark McLoughlin  <mark@skynet.ie>

	Implement the python bindings with plain C rather
	than pyrex.

	* configure.in: don't require pyrex and pass -fno-strict-aliasing
	to the compiler if it supports it.
	
	* libmenu/menu-tree.[ch]:
	(menu_tree_set_user_data), (menu_tree_get_user_data),
	(menu_tree_item_set_user_data),	(menu_tree_item_get_user_data):
	Add chessy language bindings API.
	
	* python/Makefile.am: don't build with pyrex, use -fno-string-aliasing
	if available.
	
	* python/gmenu.c: re-implement bindings.

	* python/gmenu.pyx: remove pyrex bindings.

2005-04-04  Mark McLoughlin  <mark@skynet.ie>

	Implement support for <Merge>, <Separator> etc. in
	<DefaultLayout> and fix nasty infinite recursion bug
	with <Merge type="all"/>

	* libmenu/menu-tree.c:
	(collect_layout_info), (process_layout): keep track
	of the default layout info nodes too.